Updated footer on both templates

--- a/templates/setup.html
+++ b/templates/setup.html
@@ -130,7 +130,9 @@
                 background-color: #1e1e1e;
                 padding: 10px;
                 padding-bottom: 20px;
+                position: fixed;
                 bottom: 0;
+                width: 100%;
                 justify-content: space-around;
                 text-align: center;
             }
@@ -488,10 +490,13 @@
             <p>If you now start the client with <code>python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
             {% endif %}
             <br>
+            <br>
+            <br>
+            <br>
         </main>
         <footer>
             <div class="footer-links">
-                <p>Source Code on: </p>
+                <p>Source Code on:</p>
                 <a href="https://github.com/tn3w/CipherChat" target="_blank">Github</a>
                 <a href="http://tn3wtor4vgnrimugptubpaqsf2gc4pcsktknkxt74w7p5yzbt7rwrkid.onion/projects/CipherChat" target="_blank">Hidden Service 1</a>
                 <a href="http://tn3wvjimrn3hydx4u52kzfnkgu6kffef2js27ewlhdf5htulno34vqad.onion/projects/CipherChat" target="_blank">Hidden Service 2</a>
