--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,7 @@
             footer {
                 background-color: #1e1e1e;
                 padding: 10px;
+                padding-bottom: 20px;
                 position: fixed;
                 bottom: 0;
                 width: 100%;
