Changed Nav Objects

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
             </a>
             <nav>
                 <a href="/about">About</a>
-                <a href="/safe_usage.txt" target="_blank">Safe Usage</a>
+                <a href="https://donate.torproject.org/" target="_blank">Donate to Tor</a>
             </nav>
         </header>
 
