--- a/templates/setup.html
+++ b/templates/setup.html
@@ -363,7 +363,7 @@
                 <p>You have successfully downloaded, verified, and unzipped CipherChat. Use <code>python main.py -h</code> or <code>.venv/bin/python main.py -h</code> to get an overview of all commands.</p>
                 
                 <div class="step">8. Use of this hidden service:</div>
-                <p>If you now start the client with <code>python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
+                <p>If you now start the client with <code>python main.py</code> or <code>.venv/bin/python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
             </div>
             {% endif %}
 
@@ -405,7 +405,7 @@
             <p>You have successfully downloaded, verified, and unzipped CipherChat. Use <code>python main.py -h</code> or <code>.venv/bin/python main.py -h</code> to get an overview of all commands.</p>
             
             <div class="step">8. Use of this hidden service:</div>
-            <p>If you now start the client with <code>python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
+            <p>If you now start the client with <code>python main.py</code> or <code>.venv/bin/python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
             {% endif %}
 
             {% if os == "macOS" %}
@@ -446,7 +446,7 @@
             <p>You have successfully downloaded, verified, and unzipped CipherChat. Use <code>python main.py -h</code> or <code>.venv/bin/python main.py -h</code> to get an overview of all commands.</p>
             
             <div class="step">8. Use of this hidden service:</div>
-            <p>If you now start the client with <code>python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
+            <p>If you now start the client with <code>python main.py</code> or <code>.venv/bin/python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
             {% endif %}
 
             {% if os == "linux" %}
@@ -487,7 +487,7 @@
             <p>You have successfully downloaded, verified, and unzipped CipherChat. Use <code>python main.py -h</code> or <code>.venv/bin/python main.py -h</code> to get an overview of all commands.</p>
             
             <div class="step">8. Use of this hidden service:</div>
-            <p>If you now start the client with <code>python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
+            <p>If you now start the client with <code>python main.py</code> or <code>.venv/bin/python main.py</code>, enter this hidden service as your CipherChat chat server: <code>{{ hidden_service_hostname }}</code></p>
             {% endif %}
             <br>
             <br>
